# lcov2cobertura

./: .clippy.toml  .gitignore  Cargo.toml  README.md  cobertura_split.Dockerfile  deny.toml  lcov2xml.Dockerfile  local_code_check.sh
.cargo/: config.toml
.github/workflows/: build-release-musl.yml  docker-publish.yml  rust.yml
examples/: fake_cobertura.rs
lcov2cobertura/: Cargo.toml  README.md
lcov2cobertura/src/: cobertura_split.rs  demangle.rs  lib.rs  tests.rs
src/: main.rs
