[package]
name = "lcov2xml"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
description = "convert LCOV info file to cobertura XML format"
repository = "https://github.com/mike-kfed/lcov2cobertura"
keywords = ["coverage", "gitlab", "cobertura", "lcov"]
categories = ["command-line-utilities"]
rust-version = "1.59"

[workspace]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["derive"]}
lcov = "0.8.1"
lcov2cobertura = { path = "lcov2cobertura", version = "1.0.2" }

[dev-dependencies]
quick-xml = "0.30.0"

[profile.release]
strip = "symbols"
