[package]
name = "lcov2xml"
version = "1.0.4"
edition = "2021"
license = "Apache-2.0"
description = "convert LCOV info file to cobertura XML format"
repository = "https://github.com/mike-kfed/lcov2cobertura"
keywords = ["coverage", "gitlab", "cobertura", "lcov"]
categories = ["command-line-utilities"]
rust-version = "1.59"

[workspace]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4", features = ["derive"]}
lcov = "0.8.1"
lcov2cobertura = { path = "lcov2cobertura", version = "1.0.2" }

[dev-dependencies]
quick-xml = "0.31.0"

[profile.release]
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
ambiguous-associated-items = "forbid" 
cenum-impl-drop-cast = "forbid"  
coherence-leak-check = "forbid"  
conflicting-repr-hints = "forbid"  
const-evaluatable-unchecked = "forbid"  
deprecated-cfg-attr-crate-type-name = "forbid" 
deref-into-dyn-supertrait = "forbid" 
forbidden-lint-groups = "allow" 
ill-formed-attribute-input = "forbid" 
indirect-structural-match = "forbid" 
invalid-doc-attributes = "forbid" 
invalid-type-param-default = "forbid" 
late-bound-lifetime-arguments = "forbid" 
legacy-derive-helpers = "forbid" 
macro-expanded-macro-exports-accessed-by-absolute-paths = "forbid" 
missing-fragment-specifier = "forbid" 
order-dependent-trait-objects = "forbid" 
patterns-in-fns-without-body = "forbid" 
pointer-structural-match = "forbid" 
private_bounds = "forbid"
private_interfaces = "forbid"
proc-macro-back-compat = "forbid" 
proc-macro-derive-resolution-fallback = "forbid" 
pub-use-of-private-extern-crate = "forbid" 
semicolon-in-expressions-from-macros = "forbid" 
soft-unstable = "forbid" 
uninhabited-static = "forbid" 
unstable-name-collisions = "forbid" 
unsupported-calling-conventions = "forbid" 
where-clauses-object-safety = "forbid"
missing_docs = "deny" 
rust-2021-compatibility = "deny"
rust-2018-idioms = "deny"
nonstandard-style = "deny"

[lints.clippy]
suspicious = "forbid"
style = "forbid"
complexity = "forbid"
perf = "forbid"
