[package]
name = "lcov2cobertura"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
license-file = "../LICENSE"
description = "convert LCOV info file to cobertura XML format"
repository = "https://github.com/mike-kfed/lcov2cobertura"
keywords = ["coverage", "gitlab", "cobertura", "lcov"]

[dependencies]
anyhow = "1.0.66"
quick-xml = "0.26.0"
regex = "1.7.0"
rustc-demangle = "0.1.21"

[lib]
name = "lcov2cobertura"
