[package]
name = "lcov2cobertura"
version = "1.0.7"
edition = "2021"
license = "Apache-2.0"
description = "convert LCOV info file to cobertura XML format"
repository = "https://github.com/mike-kfed/lcov2cobertura"
keywords = ["coverage", "gitlab", "cobertura", "lcov"]
rust-version = "1.81"

[dependencies]
anyhow = "1.0.100"
quick-xml = "0.38.4"
regex = "1.12.2"
rustc-demangle = "0.1.26"

[lib]
name = "lcov2cobertura"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
ambiguous-associated-items = "forbid" 
coherence-leak-check = "forbid"  
conflicting-repr-hints = "forbid"  
const-evaluatable-unchecked = "forbid"  
deref-into-dyn-supertrait = "forbid" 
forbidden-lint-groups = "allow" 
ill-formed-attribute-input = "forbid" 
invalid-doc-attributes = "forbid" 
invalid-type-param-default = "forbid" 
late-bound-lifetime-arguments = "forbid" 
legacy-derive-helpers = "forbid" 
macro-expanded-macro-exports-accessed-by-absolute-paths = "forbid" 
patterns-in-fns-without-body = "forbid" 
private_bounds = "forbid"
private_interfaces = "forbid"
proc-macro-derive-resolution-fallback = "forbid" 
pub-use-of-private-extern-crate = "forbid" 
semicolon-in-expressions-from-macros = "forbid" 
soft-unstable = "forbid" 
uninhabited-static = "forbid" 
unstable-name-collisions = "forbid" 
unsupported-calling-conventions = "forbid" 
missing_docs = "deny" 
rust-2021-compatibility = "deny"
rust-2018-idioms = "deny"
nonstandard-style = "deny"

[lints.clippy]
unwrap_used = "deny"
unwrap_in_result = "deny"
panic = "deny"
expect_used = "deny"
unimplemented = "deny"
suspicious = "forbid"
style = "forbid"
complexity = "forbid"
perf = "forbid"
pedantic = "deny"
